# fast

./: .cproject  .gitignore  .project  Makefile.in  README  README.md  configure  configure.ac
debian/: README  changelog  control  copyright  docs  fast.manpages  fast.substvars  files  install
debian/source/: options
docs/: Fast_Flow1.eps  Fast_Flow2.eps  Tutorial1.dia  Tutorial1.eps  Tutorial10.eps  Tutorial11.dia  Tutorial12.dia  Tutorial13.dia  Tutorial14.eps  Tutorial15.dia  Tutorial15.eps  Tutorial16.dia  Tutorial16.eps  Tutorial2.eps  Tutorial3.dia  Tutorial3.eps  Tutorial4.eps  Tutorial4a.dia  Tutorial4a.eps  Tutorial5.eps  Tutorial6.dia  Tutorial7.eps  Tutorial8.eps  Tutorial9.eps  fast  fast.aux  fast.dvi  fast.tex  fast.toc  fast_new.eps
src/: ErrDefs.h  LineTool.cpp  Targets.xpm  TypeDefs.h  XGremlin.xpm  about.cpp  about.h  analyserwindow.cpp  analyserwindow.h  analyserwindow_config.cpp  analyserwindow_construct.cpp  analyserwindow_errors.cpp  analyserwindow_io.cpp  analyserwindow_refresh.cpp  analyserwindow_signal.cpp  analyserwindow_signal_click.cpp  analyserwindow_signal_data.cpp  analyserwindow_signal_file.cpp  analyserwindow_signal_popup.cpp  graph.cpp  graph.h  kzline.cpp  kzline.h  kzlist.cpp  kzlist.h  linedata.cpp  linedata.h  lineio.cpp  optionswindow.cpp  optionswindow.h  outputwindow.cpp  outputwindow.h  plotFns.cpp  voigtlsqfit.cpp  voigtlsqfit.h  xgline.cpp  xgline.h  xgspectrum.cpp  xgspectrum.h
